# tellus-protocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/policy/: Cargo.toml
contracts/policy/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/trigger/: Cargo.toml
contracts/trigger/src/: lib.rs
docs/: architecture.md  farmer-onboarding.md  local-end-to-end.md  oracle-spec.md
scripts/: deploy.sh  seed.ts
sdk/typescript/: package.json
sdk/typescript/src/: client.ts  contracts.ts  index.ts  types.ts
tests/: Cargo.toml  end_to_end_tests.rs  integration_test.rs  main.rs  oracle_tests.rs  policy_tests.rs  pool_tests.rs  trigger_tests.rs
