[package]
name = "tellus-trigger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
tellus-pool = { path = "../pool" }
tellus-oracle = { path = "../oracle" }
tellus-policy = { path = "../policy" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
